--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
 <p class="alert"><%= alert %></p>
 <% if  current_user %>
 <h1>Currently logged in as: <%= current_user.first_name %> <%= current_user.last_name %></h1>
-<p><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></p>
+<p><%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "btn btn-primary", type: "button" %></p>
+<button  >Primary</button>
 <% end %>
 
 <%= yield %>
